# iEDeaL

./: .gitignore  CMakeLists.txt  EdlFile.cpp  EdlFile.h  Main.cpp  MainWindow.cpp  MainWindow.h  README.md  deployqt.cmake  stdafx.cpp
